# lcedfd

./: .gitignore  README.md  pyproject.toml
hooks/: build_hooks.py  embed_version.py  process_data_md.py
src/lcedfd/: __init__.py  _version.py  cli.py
