[project]
name = "lcedfd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eeriemyxi", email = "myxi@duck.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lcedfd = "lcedfd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lcedfd"]

[tool.hatch.build.targets.sdist]
include = [
  "hooks/process_data_md.py",
  "hooks/version.py",
  "assets/**"
]

[tool.hatch.build]
include = ["src/lcedfd/data/**"]

[tool.hatch.build.hooks.custom]
path = "hooks/build_hooks.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
