[project]
name = "lcedfd"
description = "Find editorials for LeetCode questions without an acccount"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "eeriemyxi", email = "myxi@duck.com" }
]
requires-python = ">=3.9"
dependencies = []

[tool.hatch.version]
source = "vcs"

[project.scripts]
lcedfd = "lcedfd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lcedfd"]

[tool.hatch.build.targets.sdist]
include = [
  "hooks/process_data_md.py",
  "hooks/version.py",
  "assets/**"
]

[tool.hatch.build]
include = ["src/lcedfd/data/**"]

[tool.hatch.build.hooks.custom]
path = "hooks/build_hooks.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
