[project]
name = "lcedfd"
description = "Find editorials for LeetCode questions without an account"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "eeriemyxi", email = "myxi@duck.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lcedfd = "lcedfd.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/lcedfd"]

[tool.hatch.build.hooks.custom]
path = "hooks/build_hooks.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
